--- a/website/pages/docs/Sequences-and-Series/intro-to-sequences-series.mdx
+++ b/website/pages/docs/Sequences-and-Series/intro-to-sequences-series.mdx
@@ -3,7 +3,22 @@ title: Introduction to Seqeuences and Series
 section: Numerical Sequences and Series
 order: 1
 ---
+import { BlockMath } from "react-katex";
 
 # Introduction
 
 This is an introduction to sequences and series
+
+
+<BlockMath>
+  {`
+       \\int_0^\\infty x^2 dx
+   `}
+</BlockMath>
+
+
+<BlockMath>
+  {`
+       \\int_0^\\infty
+   `}
+</BlockMath>
